fixed FF scrollbar bug in New Forest aligned-right para

--- a/web/assets/newforest/css.css
+++ b/web/assets/newforest/css.css
@@ -4,6 +4,7 @@
 
 p {
 	font-size: 100%;
+	width: 98%; /* prevent horiz scroll bar in FF */
 }
 h3 {
 	font-size: 120%;
@@ -77,3 +78,6 @@ a:hover {
     display: none;
 }
 
+#most_popular ul li, #most_recent ul li {
+    padding: 4px;
+}
